--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   english_words: ^3.1.0  
   sqflite: any
   path_provider: ^0.5.0 
+  share: ^0.6.1
 
 dev_dependencies:
   flutter_test:
